# marcotte-dev

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BUILD.md  CURSOR_RULES.txt  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  SETUP_GITHUB_SECRETS.md  backup-local.sh  build.ps1  build.sh  deploy-oracle.sh  docker-compose.yml  pyproject.toml  restore-from-backup.sh  setup-cron-backup.sh
.github/workflows/: deploy.yml  pre-commit.yaml  pypi-publish.yaml  pytest.yaml
docs/: ARCHITECTURE.md  CURSOR_INTEGRATION.md  GITHUB_ACTIONS_SETUP.md  GITHUB_SECRETS.md  LAPTOP_SETUP.md  MANUAL_INSTANCE_CREATION.md  ORACLE_CLOUD_DEPLOY.md  SESSION_STATUS_TEMP.md  SETUP.md  TERRAFORM_SETUP.md  WHEN_INSTANCE_SUCCEEDS.md
infrastructure/: .gitignore  cloud-init.yaml  main.tf  terraform.tfvars.example  tfplan  variables.tf
scripts/: backup.sh  deploy.sh  provision.sh  restore.sh  retry-provision.sh  setup-cron-backup.sh  setup-memory-janitor.sh  setup-systemd-backup.sh
services/: docker-compose.yml
services/spot-mcp-server/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  memory-janitor.service  memory-janitor.timer  migrate-content-to-document.py  migrate-to-server.py  pyproject.toml
services/spot-mcp-server/src/: memory_janitor.py
src/mcp_server_qdrant/: deduplication.py  incremental.py  mcp_server.py  qdrant.py  query_enhancer.py  reranker.py  settings.py  sparse_embedder.py
src/mcp_server_qdrant/analysis/: __init__.py  code_analyzer.py  code_chunker.py  codebase_scanner.py  relationship_mapper.py  usage_extractor.py
tests/: test_settings.py
(+13 files in other folders)
